--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,6 +3,7 @@
         <h1>Hello World</h1>
     </a>
     <nav>
+        <!-- So nice~~~ -->
         <ul>
             <li><a href='/'>Home</a></li>
         </ul>
