--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    /* I love this */
     box-sizing: border-box;
 }
 
@@ -18,6 +19,7 @@ body {
 header {
     background-color: violet;
     display: flex;
+    /* I do not agree to use vh, either use px or rem(em) */
     padding: 4vh;
     justify-content: space-between;
 }
@@ -30,6 +32,9 @@ ul {
     margin: 20px;
 }
 
+
+/* 0px can be just 0 */
+/* For spacing, try to keep values 4 or 4 * n */
 h2 {
     margin: 15px 0px;
 }
@@ -38,7 +43,19 @@ h2 {
     margin-bottom: 20px;
 }
 
+/* without div tag */
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+form input {
+    margin-bottom: 20px;
+}
+
 label {
+    /* may not need it, check default */
     display: block;
     font-weight: bold;
     margin-bottom: 5px;
