--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -3,10 +3,12 @@
 <%- include('partials/head') %>
 
     <body>
+        <!-- Please see the login page for you to improve your code -->
         <%- include('partials/header') %>
             <main>
                 <h2>Register Form</h2>
                 <form action='/register' method='post'>
+                    
                     <div class="form-sec">
                         <label for="email">Email:</label>
                         <input type="email" id="email" name="email" required>
